#4 custom clients added