@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     
-    <artifactId>distribution-wunda-navigator-internet</artifactId>
+    <artifactId>distribution-wunda-navigator-3gb</artifactId>
     <packaging>pom</packaging>
     
     <properties>
@@ -19,12 +19,10 @@
         <enforcer.skip>true</enforcer.skip>
         <maven.test.skip>true</maven.test.skip>
         <maven.install.skip>true</maven.install.skip>
-        
         <mdep.skip>false</mdep.skip>
         <cids.generate-lib.skip>false</cids.generate-lib.skip>
         <exec.skip>false</exec.skip>
         <jarsigner.skip>false</jarsigner.skip>
-        <de.cismet.cidsCodebase>http://geoportal.wuppertal.de/cidsDistributionInternet</de.cismet.cidsCodebase>
     </properties>
 
     <dependencies>
@@ -35,7 +33,7 @@
             <type>pom</type>
         </dependency>
     </dependencies>
-         
+          
     <build>
         <plugins>
             <plugin>
@@ -51,7 +49,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <vendor>Stadt Wuppertal, Ressort 102 Vermessung, Katasteramt und Geodaten</vendor>
+                    <vendor>cismet GmbH</vendor>
                     <homepage>http://geoportal.wuppertal.de/</homepage>
                     <codebase>${de.cismet.cidsCodebase}</codebase>
                     <accountExtension>${de.cismet.cidsAccountExtension}</accountExtension>
@@ -62,34 +60,33 @@
                     <sign>false</sign>
                     <classpathFromMavenRepo>false</classpathFromMavenRepo>
                     <flatClientDirectory>false</flatClientDirectory>
-                    
                     <dependencyConfiguration>
                         <dependencyEx>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>deployment-wunda-navigator</artifactId>
                             <generateJar>false</generateJar>
                             <generateJnlp>true</generateJnlp>
-                            <generateSecurityJar>true</generateSecurityJar>                          
+                            <generateSecurityJar>true</generateSecurityJar>
                             <starterConfiguration>
-                                <starterAlias>navigator_internet</starterAlias>
+                                <starterAlias>navigatorG</starterAlias>
                                 <mainClass>Sirius.navigator.Navigator</mainClass>
-                                <title>WuNDa - IMMOWUP (Konfiguration für Immobilienwirtschaft Wuppertal), ${maven.build.timestamp}</title>
-                                <description>WuNDa - IMMOWUP (Wuppertaler Navigations- und Datenmanagementsystem mit Konfiguration für Immobilienwirtschaft Wuppertal) in der Version ${project.version} vom ${maven.build.timestamp}</description>
+                                <title>WuNDa Navigator v${project.version} 3GB</title>
+                                <description>WuNDa (Wuppertaler Navigations- und Datenmanagementsystem) in der Version ${project.version} vom ${maven.build.timestamp} 3GB</description>
                                 <icon>client/${de.cismet.cidsAccountExtension}/navigator.gif</icon>
                                 <splashScreen>client/${de.cismet.cidsAccountExtension}/splash-screen.gif</splashScreen>
                                 <java>
                                     <version>1.7+</version>
-                                    <jvmArgs>-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx1200m -Xms512m</jvmArgs>
+                                    <jvmArgs>-XX:+UseG1GC -Xmx3024m -Xms756m </jvmArgs>
                                 </java>
                                 <properties>
                                     <property>
                                         <name>jnlp.intranetUse</name>
-                                        <value>false</value>
+                                        <value>true</value>
                                     </property>
                                 </properties>
                                 <arguments>
                                     <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}/config/log4j.properties</argument>
-                                    <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}/config/navigator_internet.cfg</argument>
+                                    <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}/config/navigator.cfg</argument>
                                     <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}</argument>
                                     <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}/plugins</argument>
                                     <argument>${de.cismet.cidsCodebase}/client/${de.cismet.cidsAccountExtension}/search</argument>
@@ -97,14 +94,6 @@
                                 </arguments>
                                 <localConfiguration>
                                     <jarNames>
-                                        <!--
-                                            cids wuppertal public config
-                                        -->
-                                        <jarName>resALKIS_KOM.jar</jarName>
-                                        <jarName>i18nALKIS_KOM.jar</jarName>
-                                        <!--
-                                            cids wuppertal custom config
-                                        -->
                                         <jarName>serverCert.jar</jarName>
                                         <jarName>i18n.jar</jarName>
                                         <jarName>cismapPluginImages.jar</jarName>
@@ -124,7 +113,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <profiles>
         <profile>
             <id>sign-ext-dependencies</id>
@@ -143,5 +132,5 @@
             </build>
         </profile>
     </profiles>
-    <name>distribution-wunda-navigator-internet</name>
+    <name>distribution-wunda-navigator-3gb</name>
 </project>
